changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

server/plugins.c: Fix broken error checking in plugin loading code.
Arvid Norlander 2009-01-21

common/readable.c: Fix a rare bug that caused the use of an uninitialised
  variable in god_info_msg() for gods denies summoning (such as valkyrie).
Arvid Norlander 2009-01-21

doc/Developers/objects, lib/artifacts: Remove obsolete fields color_fg and
 color_bg.
lib/adm/map_info: Remove support for color_fg/color_bg fields.
Andreas Kirschbaum 2008-12-12

server/login.c: Clear shootype value when player leaves game - otherwise
   it will point to bad value in ranges[] array.
MSW 2008-11-25

lib/collect.pl.in: Prepend an underscore to names generated for implicitly
 defined animations.
Andreas Kirschbaum 2008-11-23

Rewrite SockList handling to not malloc/free buffers but use stack
 space instead. Encapsulate most accesses to SockList instances into
 lowlevel.c.
Andreas Kirschbaum 2008-11-21

common/treasure.c: Do not call tailor_readable_ob() with invalid msgtype
 parameter.
common/readable.c: Detect and report errors when saving bookarch file.
common/readable.c: Remove trailing whitespace from generated book
 contents.
common/readable.c: Do not call get_titlelist() for invalid indices.
common/readable.c: Fix 'bookarch' parser to strip trailing spaces but not
 leading spaces. Fix possible memory leak when reading the 'bookarch'
 file. Detect and report syntax errors.
Andreas Kirschbaum 2008-11-20

common/readable.c: Fix 'messages' file parser to strip trailing spaces but
 not leading spaces. Issue warning messages if messages are truncated.